force-app/main/default/objects/PWChrono_Shift_Type__c/PWChrono_Shift_Type__c.object-meta.xml
<CustomObject>
    <label>PWChrono Shift Type</label>
    <nameField>
        <label>Shift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PWChrono Shift Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>