force-app/main/default/objects/PWChrono_Shift_Type__c/fields/Grace_Period_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grace Period (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>