force-app/main/default/objects/PWChrono_Shift_Type__c/listViews/Active_Shifts.listView-meta.xml
<ListView>
    <fullName>Active_Shifts</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Working_Hours__c</columns>
    <columns>Grace_Period_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Shifts</label>
</ListView>