force-app/main/default/objects/PWChrono_Shift_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>End_Time__c</columns>
    <columns>Grace_Period_Minutes__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Working_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>